# django-chunked-upload-api

./: .env.example  .gcloudignore  .gitignore  app.yaml  manage.py  pyproject.toml
core/: admin.py  constants.py  models.py  urls.py  utils.py
core/apiv1/: serializers.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_alter_chunkeduploadfile_user_and_more.py
django_chunked_file_upload/: asgi.py  settings.py  urls.py  wsgi.py
